# fosslight_prechecker

./: .bumpversion.cfg  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  cli.py  cli.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-release.yml  pull-request.yml
.reuse/: dep5
LICENSES/: LicenseRef-3rd_party_licenses.txt
docs/: user-guide.md
hooks/: hook-fosslight_prechecker.py  hook-fosslight_reuse.py
src/fosslight_oss_pkg/: _common.py  _convert.py  _fosslight_oss_pkg.py  _parsing_excel.py  _parsing_yaml.py  fosslight_oss_pkg.py
src/fosslight_prechecker/: _add.py  _add_header.py  _constant.py  _download_lic.py  _help.py  _precheck.py  _result.py  _result_html.py  cli.py
src/fosslight_prechecker/resources/: convert_license.json
src/fosslight_prechecker/templates/: default_template.jinja2
src/fosslight_reuse/: _add.py  _constant.py  _fosslight_reuse.py  _help.py  _result.py  _result_html.py  cli.py  wrapper_reuse_lint.py
test_run/: test_no_license.py
tests/add/: oss-pkg-info.yaml  test_add.py  test_both_have_1.py  test_both_have_2.py  test_no_copyright.py  test_no_license.py
tests/convert/: OSS-Report-Sample_0.xlsx  OSS-Report-Sample_1_BIN_Android.xlsx  oss-pkg-info.yaml
tests/report/: OSS-Report-Sample_1_BOM.xlsx
